// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен отдать структурированные данные без разметки отзывов для амп-каталога без отзывов 1`] = `
Array [
  Object {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/cars/all/",
        "name": "Продажа автомобилей",
        "position": 1,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/",
        "name": "Каталог",
        "position": 2,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/",
        "name": "Kia",
        "position": 3,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/",
        "name": "Rio",
        "position": 4,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/22500704/",
        "name": "IV Рестайлинг",
        "position": 5,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/22500704/22500752/",
        "name": "Седан",
        "position": 6,
      },
    ],
  },
  Object {
    "@context": "https://schema.org",
    "@type": "ImageObject",
    "contentUrl": "//avatars.mds.yandex.net/get-verba/997355/2a0000017490cf400f3c5cc5c5597be13a27/cattouch",
    "description": "Kia Rio IV Рестайлинг Седан. Общая оценка по отзывам - 4.369876543209877",
    "name": "Kia Rio IV Рестайлинг Седан",
  },
]
`;

exports[`Должен отдать структурированные данные для амп-каталога 1`] = `
Array [
  Object {
    "@context": "https://schema.org",
    "@type": "Car",
    "aggregateRating": Object {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.4",
      "reviewCount": "810",
    },
    "bodyType": "Седан",
    "brand": "Kia",
    "description": "Kia Rio IV Рестайлинг Седан. Общая оценка по отзывам - 4.369876543209877",
    "image": "//avatars.mds.yandex.net/get-verba/997355/2a0000017490cf400f3c5cc5c5597be13a27/cattouch",
    "manufacturer": "Kia",
    "name": "Kia Rio IV Рестайлинг Седан",
  },
  Object {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/cars/all/",
        "name": "Продажа автомобилей",
        "position": 1,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/",
        "name": "Каталог",
        "position": 2,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/",
        "name": "Kia",
        "position": 3,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/",
        "name": "Rio",
        "position": 4,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/22500704/",
        "name": "IV Рестайлинг",
        "position": 5,
      },
      Object {
        "@type": "ListItem",
        "item": "https://autoru_frontend.base_domain/amp/catalog/cars/kia/rio/22500704/22500752/",
        "name": "Седан",
        "position": 6,
      },
    ],
  },
  Object {
    "@context": "https://schema.org",
    "@type": "ImageObject",
    "contentUrl": "//avatars.mds.yandex.net/get-verba/997355/2a0000017490cf400f3c5cc5c5597be13a27/cattouch",
    "description": "Kia Rio IV Рестайлинг Седан. Общая оценка по отзывам - 4.369876543209877",
    "name": "Kia Rio IV Рестайлинг Седан",
  },
]
`;
